# elabftw

chemsync/: HANDOVER.md  pyproject.toml
chemsync/chemsync/: __main__.py  config.py
chemsync/chemsync/api/: client.py
chemsync/chemsync/engine/: diff_engine.py  hazard_mapper.py  metadata_builder.py  sync_engine.py
chemsync/chemsync/models/: chemical.py  diff.py  mapping.py
chemsync/chemsync/source/: csv_reader.py
chemsync/mappings/: default_chemdb.json
chemsync/tests/: test_csv_reader.py  test_diff_engine.py  test_hazard_mapper.py  test_metadata_builder.py
